tests/common/snapshots/rar__common__tests__rar.rs-171-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 949
  name: rar
  confidence: 128
  description: "RAR archive, version: 4, total size: 949 bytes"
  always_display: false
  extraction_declined: false
