tests/common/snapshots/rar__common__tests__rar.rs-178-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 410
  name: rar
  confidence: 128
  description: "RAR archive, version: 5, total size: 410 bytes"
  always_display: false
  extraction_declined: false
