tests/common/snapshots/rar__common__tests__rar.rs-178-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 410
  success: true
  extractor: rar_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
