tests/common/snapshots/rar__common__tests__rar.rs-190-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 922
  name: rar
  confidence: 128
  description: "RAR archive, version: 5, total size: 922 bytes"
  always_display: false
  extraction_declined: false
