tests/common/snapshots/rar__common__tests__rar.rs-62-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 327
  name: rar
  confidence: 128
  description: "RAR archive, version: 4, total size: 327 bytes"
  always_display: false
  extraction_declined: false
